gstomxvideoenc: Set bitrate in setcaps

Otherwise it gets lost whenever we configure new caps

https://bugzilla.gnome.org/show_bug.cgi?id=698049